Fix latest page box aligning to the left

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
     right: 50%;
     top: 50%;
     transform: translate(50%, -50%);
-    width: 75%;
+    width: auto;
     text-align: center;
     height: 100%;
 }
